[tool.poetry]
name = "fastapi-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
sqlmodel = "^0.0.8"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
databases = "^0.6.1"
pydash = "^5.1.1"
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
alembic = "^1.8.1"



[tool.poetry.group.docs.dependencies]
Faker = "^15.1.0"
invoke = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
