[tool.poetry]
name = "fastapi-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
aiofiles = "^23.1.0"
fastapi = "^0.94.1"
psycopg2 = "^2.9.5"
sqlmodel = "^0.0.8"
alembic = "^1.10.2"
pydash = "^6.0.2"
Jinja2 = "^3.1.2"
databases = "^0.6"

[tool.poetry.group.dev.dependencies]
Faker = "^17.6.0"
invoke = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
