[project]
requires-python = ">=3.10"

[tool.poetry]
name = "fastapi-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Theodros Zelleke <it@tzelleke.com>"]
readme = "README.md"

[tool.poetry.dependencies]
aiofiles = "^23.1.0"
alembic = "^1.10.4"
fastapi = "^0.95.1"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.6"
pydantic = "^1.10.7"
pydash = "^7.0.3"
python = "^3.10"
sqlmodel = "^0.0.8"
uvicorn = "^0.22.0"

[tool.poetry.group.test.dependencies]
httpx = "^0.24.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
Faker = "^17.6.0"
black = "^23.3.0"
invoke = "^2.1.1"
ruff = "^0.0.265"

[tool.pytest.ini_options]
addopts = [
    "--cov=app",
    "--no-cov-on-fail",
    "--import-mode=importlib",
    "-ra",
    "-q",
]
cache_dir = "~/pytest/.cache"
minversion = "6.0"
pythonpath = "."
testpaths = ["tests"]

[tool.coverage.run]
branch = true
data_file = "~/pytest/.coverage"
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
precision = 1
skip_covered = true
show_missing = true

[tool.black]
extend-exclude = '''
/(
    \.idea
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ["py310"]

[tool.ruff]
cache-dir = "~/.cache/ruff"
extend-exclude = []
extend-select = ["I"]
line-length = 88
target-version = "py310"

[tool.ruff.isort]
force-sort-within-sections = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
